stashed things wrong, sending fixed visual overflow code

--- a/src/Components/Home/Container/Container.scss
+++ b/src/Components/Home/Container/Container.scss
@@ -14,7 +14,6 @@ main.main-container {
       height: 50px;
       background-color: darkgray;
       box-shadow: 2px 0px 5px;
-      position: fixed;
     };
 
     aside {
