--- a/src/Components/SubChannelsNav/SubChannelNav.scss
+++ b/src/Components/SubChannelsNav/SubChannelNav.scss
@@ -3,4 +3,5 @@ section.sub-nav {
   max-width: 220px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 };
